add backend link

--- a/src/app/components/my-rides/my-rides.component.html
+++ b/src/app/components/my-rides/my-rides.component.html
@@ -7,6 +7,8 @@
     </div>
 </ng-container> -->
 
+{{allTripsOfDriver.length | json}}
+
 <div class="ywxs5t" *ngIf="allTripsOfDriver?.length != 0">
     Bütün elanlariniz
     <img src="assets/right-arrow.png">
