--- a/src/styles.scss
+++ b/src/styles.scss
@@ -337,6 +337,9 @@ label {
     padding: 10px;
     border: none;
     outline: none;
+  }
+
+  select {
     
     &:focus {
       background: #ffffff;
@@ -346,6 +349,7 @@ label {
       background: #ffffff;
     }
   }
+
 }
 
 .search-form {
